--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ".env"
     ports:
       - "3000:3000"
+    volumes:
+      - "./coverage:/usr/src/app/coverage"
     depends_on:
       - activemq
     command: "yarn run start"
